# coap-lite

./: .gitignore  Cargo.toml  flake.nix
examples/: bytes.rs  client.rs  client_tcp.rs  server.rs  server_tcp.rs
examples/coap_proxy/: Cargo.toml  device.crt  device1.key  device1_key.pem  server_key.pem
examples/coap_proxy/src/: banlist_checker.rs  certificate.rs  client_cert_verifier.rs  client_connection.rs  connected_clients_tracker.rs  error.rs  main.rs  message_sink.rs  message_source.rs  to_device_message_fetcher.rs
examples/coap_server_with_connection_init/: Cargo.toml
examples/coap_server_with_connection_init/src/: main.rs
src/: coap_message_ext.rs  header.rs  lib.rs  message_class.rs  message_type.rs  observe.rs  packet.rs  packet_tcp.rs  packet_udp.rs  request.rs  request_type.rs  response.rs  response_type.rs  signal.rs  signal_type.rs
src/tcp/: packet.rs
src/udp/: header.rs  packet.rs
