[package]
name = "coap_proxy"
version = "0.0.1"
authors = [ "Gleb Vodovozov <vodovozovge@gmail.com>" ]
edition = "2018"

[dependencies]
coap-lite = { path = "../../" }
tokio = { version = "1.0", features = [ "full" ] }
tokio-rustls = { version = "0.22", features = [ "dangerous_configuration" ] }
argh = "*"
log = "0.4.0"
env_logger = "0.8.4"
x509-parser = "0.9.2"
redis = { version = "0.20", features = ['r2d2'] }
r2d2 = "*"
serde_json = "*"
base64 = "0.13.0"
