[package]
name = "coap_server_with_connection_init"
version = "0.1.0"
authors = ["Gleb Vodovozov <vodovozovge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap-lite = { path = "../../" }
tokio = { version = "1.0", features = [ "full" ] }
tokio-rustls = { version = "0.22", features = [ "dangerous_configuration" ] }
argh = "*"
log = "0.4.0"
env_logger = "0.8.4"
serde_json = "*"
rand = "*"
chrono = "*"
